-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.1.0 Beta 1
-
None
I've tried to load a few OpenType fonts in Qt 5.1 (I've never tried otf fonts in other Qt versions, so I don't know if this is new or not), and none of them display correctly on Windows. On OSX things look fine. Attached is an example.
- replaces
-
QTBUG-11387 Kerning with 'kern' table fails for OpenType PS fonts on Windows
-
- Closed
-
For Gerrit Dashboard: QTBUG-31656 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
101883,4 | Fix OpenType fonts with cmap tables on Windows | 4.8 | qt/qt | Status: MERGED | +2 | 0 |