Fix OpenType fonts with cmap tables on Windows

Task-number: QTBUG-31656
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>
Reviewed-by: Lars Knoll <lars.knoll@digia.com>
Change-Id: If941bddb6173b6bd93117ba5bd35fa4050f29e3d
(cherry picked from qtbase/0a170be576153b84ee6249f1a2b7cbce1ef10d84)

(cherry picked from commit 61379d481a1a9d646c812df010089c6d52d18f31)