src/gui/text/qfontengine_win_p.h
@@ -125,6 +125,8 @@ class QFontEngineWin : public QFontEngine
    mutable int designAdvancesSize;
 
  private:
+   bool hasCFFTable() const;
+   bool hasCMapTable() const;
    QNativeImage *drawGDIGlyph(HFONT font, glyph_t, int margin, const QTransform &xform, QImage::Format mask_format);
 
 };
